# rv

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  dependencies.sh  generate_spec.py  install.sh  main.py  pyproject.toml  rv.py
.github/workflows/: build-release.yml  ci.yml  distribute-scripts.yml
rv/: __init__.py  __main__.py  config.py  main.py  utils.py
rv/commands/: __init__.py  base.py  commit.py  get_pass.py  init.py  log.py
scripts/: install-linux-amd64  install-windows-amd64.bat  install-windows-amd64.ps1
